# mica

./: .gitignore  .licensure.yml  AGENTS.md  AUTHORS  CODING-STYLE.md  CONTRIBUTING.md  Cargo.toml  MICA_AUTHORS_GUIDE.md  MICA_MANIFESTO.md  MICA_RELATION_KERNEL.md  MICA_SEMANTICS_NOTES.md  MICA_STANDARD_LIBRARY_NOTES.md  MICA_SURFACE_SYNTAX.md  Makefile  README  README.md  TODO  bootstrap  config.h.in  configure.ac  dprint.json  implementation_plan.md  latency_comparison.md  relational-prototype-object-system.md  spinal-tap.toml  task.md  walkthrough.md
.github/: dependabot.yml
apps/: README.md
base/: Makefile  Ref.hh  aligned_allocator.cc  aligned_allocator.hh  association_protocol.hh  collection_protocol.hh  logging.cc  logging.hh  reference_counted.cc  reference_counted.hh  rope_string.hh  sequence_protocol.hh  serializable.hh  strings.hh  type_protocol.hh  types.hh
common/: contract.h  mica.h
crates/auth/: Cargo.toml  README.md
crates/auth/src/: config.rs  cookie.rs  lib.rs  oauth.rs  paseto.rs  password.rs  session.rs
crates/browser/: Cargo.toml  README.md
crates/browser/src/: lib.rs
crates/compiler/: Cargo.toml  README.md
crates/compiler/fuzz/: Cargo.toml
crates/compiler/fuzz/fuzz_targets/: value_kind_annotations.rs
crates/compiler/src/: ast.rs  backend.rs  diagnostics.rs  hir.rs  kinds.rs  lexer.rs  lib.rs  lower.rs  parser.rs  semantics.rs  syntax.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: external_http.rs  main.rs  metrics.rs  rpc.rs
crates/driver/: Cargo.toml  README.md
crates/driver/src/: affinity.rs  driver.rs  execution.rs  lib.rs  metrics.rs  pool.rs  tests.rs  thread.rs  types.rs
crates/host-console/: Cargo.toml  README.md
crates/host-console/src/: main.rs
crates/host-tcp/: Cargo.toml  README.md
crates/host-tcp/src/: lib.rs
crates/micac/: Cargo.toml  README.md
crates/micac/src/: main.rs
crates/relation-kernel/: Cargo.toml  README.md
crates/relation-kernel/benches/: relation_durability_benches.rs  relation_index_benches.rs  relation_join_rule_benches.rs  relation_value_benches.rs  transaction_overlay_benches.rs
crates/relation-kernel/src/: batch.rs  catalog.rs  closure.rs  commit_bloom.rs  computed.rs  differential.rs  differential_tests.rs  dispatch.rs  dispatch_cache.rs  error.rs  execution.rs  fact.rs  index.rs  kernel.rs  lib.rs  materialized.rs  metadata.rs  method_program_cache.rs  metrics.rs  neighborhood.rs  projected.rs  provider.rs  query.rs  radix_key.rs  relation_algebra.rs  relation_states.rs  rules.rs  snapshot.rs  tests.rs  transaction.rs  transient.rs  tuple.rs  workspace.rs
crates/relation-kernel/src/index/: tuple_bucket.rs  tuple_index.rs  tuple_store.rs
crates/relation-kernel/src/provider/: memory.rs  mod.rs
crates/relation-kernel/src/provider/fjall/: codec.rs  layout.rs  loader.rs  mod.rs  writer.rs
crates/relation-kernel/src/transaction/: overlay.rs
crates/relation-wgpu/: Cargo.toml
crates/relation-wgpu/src/: lib.rs
crates/runner/: Cargo.toml  README.md
crates/runner/src/: lib.rs  main.rs
crates/runtime/: Cargo.toml  README.md  RELATION_DURABILITY_MIGRATION.md  TRANSIENT_RELATION_INVENTORY.md
crates/runtime/benches/: relation_lifecycle_benches.rs  task_benches.rs  transient_relation_benches.rs
crates/runtime/src/: authority.rs  builtin.rs  effect.rs  embedding.rs  error.rs  json.rs  lib.rs  metrics.rs  openai.rs  program.rs  retrieval.rs  scheduler.rs  source_provider.rs  subscription.rs  task.rs  task_manager.rs  tests.rs  types.rs  vm.rs  vm_tests.rs
crates/runtime/src/builtins/: mod.rs  scalar.rs
crates/runtime/src/source_provider/: rust_analyzer.rs
crates/runtime/tests/: source_provider.rs
crates/source-provider/: Cargo.toml  README.md
crates/source-provider/src/: index.rs  lib.rs  navigation.rs  receive.rs  relations.rs  rust_analyzer.rs  syntax.rs  util.rs  vcs.rs
crates/telnet-host/: Cargo.toml  README.md
crates/telnet-host/src/: codec.rs  lib.rs
crates/testing/load-tools/: Cargo.toml  README.md
crates/testing/load-tools/src/: direct-driver-load-test.rs  parallel-operator-load-test.rs  property-update-load-test.rs  query-join-load-test.rs  relation-differential-maintenance-benchmark.rs  relation-equality-join-benchmark.rs  relation-membership-benchmark.rs  wgpu-membership-prototype.rs  wgpu-string-membership-prototype.rs
crates/var/: Cargo.toml  README.md
crates/var/benches/: var_benches.rs
crates/var/fuzz/: Cargo.toml
crates/var/fuzz/fuzz_targets/: value_ops.rs
crates/var/src/: abi.rs  codec.rs  heap.rs  lib.rs  symbol.rs  tests.rs  traits.rs  tuple.rs  value.rs  visit.rs
crates/var/tests/: properties.rs
crates/vm/: Cargo.toml  README.md
crates/vm-cranelift/: Cargo.toml
crates/vm-cranelift/benches/: value_codegen_benches.rs
crates/vm-cranelift/src/: emitter.rs  float_loop.rs  integer_loop.rs  lib.rs  natural_loop.rs
crates/vm-cranelift/tests/: float_loop.rs  integer_loop.rs  natural_loop.rs
crates/vm/benches/: map_index_spike.rs  string_compare_spike.rs  vm_benches.rs
crates/vm/benches/fixtures/: mod.rs
crates/vm/src/: authority.rs  builtin.rs  cranelift_tests.rs  error.rs  lib.rs  metrics.rs  program.rs  vm.rs
crates/web-host/: Cargo.toml  README.md
crates/web-host/src/: auth.rs  codec.rs  lib.rs  metrics.rs  request.rs  response.rs  server.rs  sync.rs
crates/webtransport-host/: Cargo.toml  README.md  browser-smoke.html  sync-client.js  sync-client.node-test.mjs
crates/webtransport-host/src/: lib.rs  metrics.rs  serve.rs  state.rs  sync.rs
doc/: CORE-NOTES  DEMETER.txt  DESIGN-DECISIONS.txt  INFLUENCES  NEW-NATIVE-TYPE-OPS  XML-NOTES  nana.txt
examples/: README.md  capabilities.mica  chat-sync.mica  event-substitutions.mica  events.mica  http-core.mica  mud-command-parser.mica  mud-core.mica  relational-router.mica  string.mica  sync-dom.mica  sync-host.mica  sync-view-provider.mica
mdbook/: book.toml
mk/: common.mk  defs.mk.in  executable.mk  staticlib.mk
parser/: Binding.cc  Binding.hh  Makefile  MicaParser.cc  MicaParser.hh  Nodes.cc  Nodes.hh  lexer.dlp  mica_parser.cc  parser.whl
(+257 files in other folders)
