[workspace]
resolver = "3"
members = [
    "crates/browser",
    "crates/compiler",
    "crates/daemon",
    "crates/driver",
    "crates/host-zmq",
    "crates/host-protocol",
    "crates/host-console",
    "crates/web-host",
    "crates/telnet-host",
    "crates/runner",
    "crates/relation-kernel",
    "crates/runtime",
    "crates/testing/load-tools",
    "crates/var",
    "crates/vm",
]
exclude = ["crates/var/fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"

[workspace.dependencies]
mica-compiler = { path = "crates/compiler" }
mica-driver = { path = "crates/driver" }
mica-host-protocol = { path = "crates/host-protocol" }
mica-host-console = { path = "crates/host-console" }
mica-web-host = { path = "crates/web-host" }
mica-telnet-host = { path = "crates/telnet-host" }
mica-host-zmq = { path = "crates/host-zmq" }
mica-relation-kernel = { path = "crates/relation-kernel", default-features = false }
mica-runtime = { path = "crates/runtime" }
mica-var = { path = "crates/var" }
mica-vm = { path = "crates/vm" }
rart = { version = "0.10", default-features = false }

# core
arc-swap = "1.9"
clap = { version = "4.6", features = ["derive"] }
compio = { version = "0.19.0-rc.1", features = ["async-fd", "dispatcher", "net", "time"] }
fjall = "3.1"
httparse = "1.10"
zmq = { git = "https://github.com/rdaum/rust-zmq.git", branch = "main" }

# for util
rustyline = "18.0.0"

# development / testing / benching
micromeasure = "0.6"
proptest = "1.11"
