[workspace]
resolver = "3"
members = [
    "crates/browser",
    "crates/compiler",
    "crates/daemon",
    "crates/driver",
    "crates/host-zmq",
    "crates/host-protocol",
    "crates/host-console",
    "crates/web-host",
    "crates/webtransport-host",
    "crates/telnet-host",
    "crates/runner",
    "crates/relation-kernel",
    "crates/runtime",
    "crates/testing/load-tools",
    "crates/var",
    "crates/vm",
]
exclude = ["crates/var/fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"

[workspace.dependencies]
mica-compiler = { path = "crates/compiler" }
mica-driver = { path = "crates/driver" }
mica-host-protocol = { path = "crates/host-protocol" }
mica-host-console = { path = "crates/host-console" }
mica-web-host = { path = "crates/web-host" }
mica-webtransport-host = { path = "crates/webtransport-host" }
mica-telnet-host = { path = "crates/telnet-host" }
mica-host-zmq = { path = "crates/host-zmq" }
mica-relation-kernel = { path = "crates/relation-kernel", default-features = false }
mica-runtime = { path = "crates/runtime" }
mica-var = { path = "crates/var" }
mica-vm = { path = "crates/vm" }
rart = { version = "0.10", default-features = false }

# core
arc-swap = "1.9"
bytes = "1.11"
clap = { version = "4.6", features = ["derive"] }
compio = { version = "=0.19.0-rc.1", features = ["async-fd", "dispatcher", "net", "time"] }
compio-quic = { version = "=0.8.0-rc.1", features = ["h3"] }
fjall = "3.1"
h3-webtransport = "0.1.2"
httparse = "1.10"
http = "1.4"
rcgen = "0.14"
rustls-pemfile = "2.2"
rustls-pki-types = "1.13"
serde_json = "1.0"
tokio = "1.49"
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-md = { version = "0.5", features = ["parser"] }
tree-sitter-rust = "0.24"
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
xml = "1.0"
zmq = { git = "https://github.com/rdaum/rust-zmq.git", branch = "main" }

# for util
rustyline = "18.0.0"

# development / testing / benching
micromeasure = "0.6"
proptest = "1.11"
