[workspace]
resolver = "3"
members = [
    "crates/auth",
    "crates/browser",
    "crates/compiler",
    "crates/daemon",
    "crates/driver",
    "crates/host-console",
    "crates/host-protocol",
    "crates/host-zmq",
    "crates/micac",
    "crates/relation-kernel",
    "crates/relation-wgpu",
    "crates/runner",
    "crates/runtime",
    "crates/source-provider",
    "crates/telnet-host",
    "crates/testing/load-tools",
    "crates/var",
    "crates/vm",
    "crates/vm-cranelift",
    "crates/web-host",
    "crates/webtransport-host",
]
exclude = ["crates/compiler/fuzz", "crates/var/fuzz"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.95"

[workspace.dependencies]
mica-auth = { path = "crates/auth" }
mica-compiler = { path = "crates/compiler" }
mica-driver = { path = "crates/driver" }
mica-host-console = { path = "crates/host-console" }
mica-host-protocol = { path = "crates/host-protocol" }
mica-host-zmq = { path = "crates/host-zmq" }
mica-micac = { path = "crates/micac" }
mica-relation-kernel = { path = "crates/relation-kernel", default-features = false }
mica-relation-wgpu = { path = "crates/relation-wgpu" }
mica-runtime = { path = "crates/runtime" }
mica-source-provider = { path = "crates/source-provider" }
mica-telnet-host = { path = "crates/telnet-host" }
mica-var = { path = "crates/var" }
mica-vm = { path = "crates/vm", default-features = false }
mica-vm-cranelift = { path = "crates/vm-cranelift" }
mica-web-host = { path = "crates/web-host" }
mica-webtransport-host = { path = "crates/webtransport-host" }
rart = { version = "0.10", default-features = false }

# core
arc-swap = "1.9"
argon2 = { version = "0.5", features = ["std"] }
ariadne = "0.6"
base64 = "0.22"
bytes = "1.11"
clap = { version = "4.6", features = ["derive"] }
compio = { version = "=0.18.0", features = ["dispatcher", "net", "time"] }
compio-quic = { version = "=0.7.0", features = ["h3"] }
cranelift-codegen = { version = "0.133.1", default-features = false, features = ["std"] }
cranelift-frontend = { version = "0.133.1", default-features = false, features = ["std"] }
cranelift-jit = { version = "0.133.1", default-features = false }
cranelift-module = { version = "0.133.1", default-features = false, features = ["std"] }
cyper = { version = "0.8.0", default-features = false, features = ["native-tls", "stream"] }
fast-telemetry = "0.8"
fast-telemetry-export = { version = "0.8", default-features = false, features = ["compio"] }
fjall = "3.1"
futures-util = "0.3"
h3-webtransport = "0.1.2"
http = "1.4"
httparse = "1.10"
pollster = "0.4"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1.12"
rcgen = "0.14"
rustls-pemfile = "2.2"
rustls-pki-types = "1.13"
rusty_paseto = { version = "0.10", default-features = false, features = ["batteries_included", "v4_local"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.4"
time = "0.3"
tokio = "1.49"
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-javascript = "0.25"
tree-sitter-md = { version = "0.5", features = ["parser"] }
tree-sitter-rust = "0.24"
ureq = "3.3"
wgpu = { version = "30.0", default-features = false, features = ["parking_lot", "std", "vulkan", "wgsl"] }
wtransport = { version = "0.7", features = ["dangerous-configuration"] }
xml = "1.0"
zmq = { git = "https://github.com/rdaum/rust-zmq.git", branch = "main" }

# for util
rustyline = "18.0.0"

# development / testing / benching
micromeasure = "0.10"
proptest = "1.11"
