[package]
name = "mica-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication and session management for Mica"

[dependencies]
mica-var.workspace = true
mica-driver.workspace = true
mica-runtime.workspace = true
rusty_paseto.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rand.workspace = true
tracing.workspace = true
time.workspace = true
ureq.workspace = true

[dev-dependencies]
compio.workspace = true
