[package]
name = "mica-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Authentication and session management for Mica"

[dependencies]
argon2.workspace = true
mica-driver.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
rand.workspace = true
rand_core.workspace = true
rusty_paseto.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
compio.workspace = true
