[package]
name = "mica-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser-oriented Mica compiler, VM, and projected relation package"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mica-compiler.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
mica-vm.workspace = true
