[package]
name = "mica-compiler"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ariadne.workspace = true
base64.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
mica-vm.workspace = true

[dev-dependencies]
mica-runtime.workspace = true
