[package]
name = "mica-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal TCP endpoint transport for Mica"

[dependencies]
clap.workspace = true
mica-driver.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true

[[bin]]
name = "mica-daemon"
path = "src/main.rs"
