[package]
name = "mica-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Minimal TCP endpoint transport for Mica"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-host-tcp.workspace = true
mica-host-zmq.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
zmq.workspace = true

[[bin]]
name = "mica-daemon"
path = "src/main.rs"
