[package]
name = "mica-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mica daemon with an in-process telnet host"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-telnet-host.workspace = true
mica-host-zmq.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
mica-web-host.workspace = true
zmq.workspace = true

[[bin]]
name = "mica-daemon"
path = "src/main.rs"
