[package]
name = "mica-host-tcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Line-oriented TCP host transport for Mica"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-host-zmq.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
zmq.workspace = true

[[bin]]
name = "mica-tcp-host"
path = "src/bin/mica-tcp-host.rs"
