[package]
name = "mica-relation-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MVCC relation kernel for Mica"

[features]
default = ["fjall-provider"]
fjall-provider = ["dep:fjall"]

[dependencies]
arc-swap.workspace = true
fjall = { workspace = true, optional = true }
mica-var.workspace = true
rart.workspace = true

[dev-dependencies]
micromeasure.workspace = true

[[bench]]
name = "relation_index_benches"
harness = false
