[package]
name = "mica-relation-wgpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "wgpu execution for packed Mica relation operators"

[dependencies]
fast-telemetry.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
pollster.workspace = true
wgpu.workspace = true
