[package]
name = "mica-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mica"
path = "src/main.rs"

[dependencies]
clap.workspace = true
mica-compiler.workspace = true
mica-relation-kernel.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
rustyline.workspace = true
