[package]
name = "mica-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mica"
path = "src/main.rs"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-compiler.workspace = true
mica-driver.workspace = true
mica-relation-kernel = { workspace = true, features = ["fjall-provider"] }
mica-runtime.workspace = true
mica-source-provider.workspace = true
mica-var.workspace = true
rustyline.workspace = true
