[package]
name = "mica-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Live Mica runtime environment"

[dependencies]
mica-compiler.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
mica-vm.workspace = true
