[package]
name = "mica-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Live Mica runtime environment"

[dependencies]
mica-compiler.workspace = true
mica-host-protocol.workspace = true
mica-relation-kernel = { workspace = true, features = ["fjall-provider"] }
mica-var.workspace = true
mica-vm.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-md.workspace = true
tree-sitter-rust.workspace = true
xml.workspace = true
