[package]
name = "mica-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Live Mica runtime environment"

[dependencies]
base64.workspace = true
fast-telemetry.workspace = true
mica-compiler.workspace = true
mica-host-protocol.workspace = true
mica-relation-kernel = { workspace = true, features = ["fjall-provider"] }
mica-source-provider.workspace = true
mica-var.workspace = true
mica-vm.workspace = true
serde_json.workspace = true
tracing.workspace = true
xml.workspace = true
