[package]
name = "mica-source-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Source browsing computed relations and index providers for Mica"

[dependencies]
clap = { workspace = true, features = ["derive"] }
gix = "0.83.0"
gix-imara-diff = { version = "0.2.2", features = ["unified_diff"] }
jj-lib = { version = "0.41", features = ["git"] }
mica-compiler.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["io-util"] }
tree-sitter.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-md.workspace = true
tree-sitter-rust.workspace = true

[[bin]]
name = "mica-git-receive-record"
path = "src/bin/mica-git-receive-record.rs"
