[package]
name = "mica-telnet-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Telnet host transport for Mica"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-host-zmq.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
zmq.workspace = true

[[bin]]
name = "mica-telnet-host"
path = "src/bin/mica-telnet-host.rs"
