[package]
name = "mica-vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Register-based bytecode VM for Mica"

[dependencies]
arc-swap.workspace = true
fast-telemetry.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
tracing.workspace = true
