[package]
name = "mica-vm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Register-based bytecode VM for Mica"

[features]
default = []
cranelift = ["dep:mica-vm-cranelift"]

[dependencies]
arc-swap.workspace = true
fast-telemetry.workspace = true
mica-relation-kernel.workspace = true
mica-var.workspace = true
mica-vm-cranelift = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
micromeasure.workspace = true

[[bench]]
name = "vm_benches"
harness = false
required-features = ["cranelift"]

[[bench]]
name = "string_compare_spike"
harness = false
required-features = ["cranelift"]

[[bench]]
name = "map_index_spike"
harness = false
required-features = ["cranelift"]
