[package]
name = "mica-web-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP host transport for Mica"

[dependencies]
clap.workspace = true
compio.workspace = true
fast-telemetry.workspace = true
httparse.workspace = true
mica-auth.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "mica-web-host"
path = "src/bin/mica-web-host.rs"
