[package]
name = "mica-webtransport-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Mica WebTransport host over compio QUIC"

[dependencies]
bytes.workspace = true
compio.workspace = true
compio-quic.workspace = true
h3-webtransport.workspace = true
http.workspace = true
mica-driver.workspace = true
mica-host-protocol.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde_json.workspace = true

[dev-dependencies]
rcgen.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
wtransport.workspace = true
