[package]
name = "mica-load-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Load testing tools for Mica"

[[bin]]
name = "direct-driver-load-test"
path = "src/direct-driver-load-test.rs"

[[bin]]
name = "property-update-load-test"
path = "src/property-update-load-test.rs"

[[bin]]
name = "query-join-load-test"
path = "src/query-join-load-test.rs"

[[bin]]
name = "parallel-operator-load-test"
path = "src/parallel-operator-load-test.rs"

[[bin]]
name = "wgpu-membership-prototype"
path = "src/wgpu-membership-prototype.rs"

[[bin]]
name = "relation-membership-benchmark"
path = "src/relation-membership-benchmark.rs"

[[bin]]
name = "wgpu-string-membership-prototype"
path = "src/wgpu-string-membership-prototype.rs"

[dependencies]
clap.workspace = true
compio.workspace = true
mica-driver.workspace = true
mica-relation-kernel = { workspace = true, features = ["fjall-provider"] }
mica-relation-wgpu.workspace = true
mica-runtime.workspace = true
mica-var.workspace = true
pollster.workspace = true
rayon.workspace = true
wgpu.workspace = true
