[package]
name = "mica-var-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mica-var = { path = ".." }

[[bin]]
name = "value_ops"
path = "fuzz_targets/value_ops.rs"
test = false
doc = false
bench = false
